@@ -142,6 +142,23 @@ if test "$enable_evdev" != "no"; then
 	fi
 fi
 
+dnl Check for mousedev build
+WCM_OPTION_MOUSEDEV=no
+AC_ARG_ENABLE(mousedev,
+[  --enable-mousedev  Enable building mousedev.o               default=no],
+	, enable_mousedev=no)
+if test "$enable_mousedev" != "no"; then
+	if test "$WCM_ENV_KERNEL" != "yes"; then
+		echo "***"; echo "*** WARNING:";
+		echo "*** Unable to compile mousedev.o without kernel build environment"
+		echo "*** mousedev.o will not be built"
+		echo "***"
+	else
+		WCM_OPTION_MOUSEDEV=yes
+		WCM_MODULES="$WCM_MODULES mousedev.o"
+	fi
+fi
+
 dnl Check for input build
 WCM_OPTION_INPUT=no
 AC_ARG_ENABLE(input,
@@ -343,6 +360,7 @@ echo "             xidump - $WCM_OPTION_XIDUMP $WCM_PATCH_XIDUMP"
 echo "              hid.o - $WCM_OPTION_HID $WCM_PATCH_HID"
 echo "         usbmouse.o - $WCM_OPTION_USBMOUSE"
 echo "            evdev.o - $WCM_OPTION_EVDEV"
+echo "         mousedev.o - $WCM_OPTION_MOUSEDEV"
 echo "            input.o - $WCM_OPTION_INPUT"
 echo "        tabletdev.o - $WCM_OPTION_TABLETDEV"
 echo "        wacom_drv.o - $WCM_OPTION_WACOMDRV $WCM_PATCH_WACOMDRV"
